[project]
name = "ComfyUI-TypeAux"
description = "Various auxiliary nodes, continue to increase when there is free time"
version = "1.0.0"
license = { text = "MIT License" }
dependencies  = []

[project.urls]
Repository = "https://github.com/sleechengn/ComfyUI-TypeAux"

[tool.comfy]
PublisherId = "sleechengn"
DisplayName = "ComfyUI-TypeAux"